@@ -75,23 +75,16 @@ MainMenu::enter(GameEngine* ge)
   
   mGameEngine = ge;
   
-  const Rectf scrn(ge->getOgreRenderer()->getDefaultRenderTarget().getArea());
   //  Loading the main menu
-  try
-    {
-      mMenuWindow = loadLayout("menu.layout", "root/GameMenu");
+  mMenuWindow = loadLayout("menu.layout", "root/GameMenu");
 
-      if(! CEGUI::FontManager::getSingleton().isDefined( "DejaVuSans-12" ) )
-	LOGE("'DejaVuSans-12' font is undefined");
+  if(! CEGUI::FontManager::getSingleton().isDefined( "DejaVuSans-12" ) )
+    LOGE("'DejaVuSans-12' font is undefined");
       
   // Get screen size and font
-      mDejavuSans12 = &CEGUI::FontManager::getSingleton().get("DejaVuSans-12");
-    }
-  catch(CEGUI::UnknownObjectException e)
-    {
-      LOGE("Can't load 'DejaVuSans-12' font");
-    }
-  
+  const Rectf scrn(ge->getOgreRenderer()->getDefaultRenderTarget().getArea());
+  mDejavuSans12 = &CEGUI::FontManager::getSingleton().get("DejaVuSans-12");
+
   // Create logo geometry buffer
   mLogoGeometry = &ge->getOgreRenderer()->createGeometryBuffer();
   ImageManager::getSingleton().addFromImageFile("rpgLogo","rpglogo.png");
