@@ -1,5 +1,7 @@
 2016-12-07  Jérôme Pasquier  <rainbru@free.fr>
 
+	* src/client/TempMessage.cpp: add a static logger.
+
 	* media/schemes/TaharezLook.scheme: extracted from schemes.zip to be
 	modified.
 	* media/cegui-orig/Makefile.am: remove unneeded old file.
